Códigos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    APOSTROFE
    ARROBA
    ASPAS
    CASE
    CLONE
    COMMENT_MULTI
    COMMENT_SINGLE
    CONCATENATE
    CRASE
    DECLARE
    ENDDECLARE
    IDENTATION
    OR
    VAR

Grammar

Rule 0     S' -> main
Rule 1     main -> BEGIN_PROGRAM main_INNER END_PROGRAM
Rule 2     main -> BEGIN_PROGRAM END_PROGRAM
Rule 3     inner_statement -> function_declaration_statement
Rule 4     inner_statement -> statement
Rule 5     statement -> expr SEMICOLON
Rule 6     statement -> statement_if statement_elseif statement_else
Rule 7     statement -> WHILE expr_paren statement_BLOCK_OPT
Rule 8     statement -> DO statement_BLOCK_OPT WHILE expr_paren SEMICOLON
Rule 9     statement -> FOR LPAREN for_expr_OPT SEMICOLON for_expr_OPT SEMICOLON for_expr_OPT RPAREN statement_BLOCK_OPT
Rule 10    statement -> statement_foreach
Rule 11    statement -> BREAK expr_OPT SEMICOLON
Rule 12    statement -> CONTINUE expr_OPT SEMICOLON
Rule 13    statement -> RETURN expr_return_OPT SEMICOLON
Rule 14    statement -> GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
Rule 15    ampersand_variable -> AMPERSAND_OPT VARIABLE
Rule 16    global_var -> VARIABLE
Rule 17    global_var -> DOLAR VARIABLE
Rule 18    global_var -> DOLAR LKEY expr RKEY
Rule 19    statement_COLON_GLOBAL -> COLON global_var statement_COLON_GLOBAL
Rule 20    statement_COLON_GLOBAL -> <empty>
Rule 21    expr_paren -> LPAREN expr RPAREN
Rule 22    expr_return_OPT -> expr
Rule 23    expr_return_OPT -> <empty>
Rule 24    statement_if -> IF expr_paren statement_BLOCK_OPT
Rule 25    statement_elseif -> ELSEIF expr_paren statement_BLOCK_OPT
Rule 26    statement_elseif -> <empty>
Rule 27    statement_else -> ELSE statement_BLOCK_OPT
Rule 28    statement_else -> <empty>
Rule 29    statement_foreach -> FOREACH LPAREN foreach_first_param AS ampersand_variable statement_attr_variable_OPT RPAREN statement_BLOCK_OPT
Rule 30    foreach_first_param -> variable
Rule 31    foreach_first_param -> expr
Rule 32    for_expr_OPT -> expr for_expr_COLON_EXPR
Rule 33    for_expr_OPT -> <empty>
Rule 34    function_call -> ID LPAREN function_call_parameter_list RPAREN
Rule 35    function_call -> base_variable
Rule 36    function_call_parameter_list -> function_call_parameter function_call_list_COLON_FUNCTION
Rule 37    function_call_parameter_list -> <empty>
Rule 38    function_call_parameter -> variable
Rule 39    function_call_parameter -> AMPERSAND VARIABLE
Rule 40    assignment_list_element -> variable
Rule 41    assignment_list_element -> LIST LPAREN assignment_list_element assignment_list_element_COLON_ASSIGNMENT RPAREN
Rule 42    unary_operator -> EXC_DOT
Rule 43    unary_operator -> PLUS
Rule 44    unary_operator -> MINUS
Rule 45    type_cast_operator -> INT_TYPE
Rule 46    type_cast_operator -> DOUBLE_TYPE
Rule 47    type_cast_operator -> FLOAT_TYPE
Rule 48    type_cast_operator -> REAL_TYPE
Rule 49    type_cast_operator -> STRING_TYPE
Rule 50    type_cast_operator -> ARRAY_TYPE
Rule 51    type_cast_operator -> BOOLEAN_TYPE
Rule 52    type_cast_operator -> BOOL_TYPE
Rule 53    type_cast_operator -> UNSET
Rule 54    arithmetic_operator -> PLUS
Rule 55    arithmetic_operator -> DIVIDE
Rule 56    arithmetic_operator -> PERCENT
Rule 57    arithmetic_operator -> TIMES
Rule 58    arithmetic_operator -> MINUS
Rule 59    assign_operator -> ADD_ASSIGN
Rule 60    assign_operator -> SUB_ASSIGN
Rule 61    assign_operator -> MOD_ASSIGN
Rule 62    assign_operator -> PLUS_ASSIGN
Rule 63    assign_operator -> DIVIDE_ASSIGN
Rule 64    assign_operator -> ASSIGN
Rule 65    comparission_operator -> EQUALS
Rule 66    comparission_operator -> GREAT_THAN
Rule 67    comparission_operator -> LESS_THAN
Rule 68    comparission_operator -> LESS_EQUAL
Rule 69    comparission_operator -> GREAT_EQUAL
Rule 70    comparission_operator -> NOT_EQUAL
Rule 71    comparission_operator -> LEFT_LOGICAL
Rule 72    comparission_operator -> RIGHT_LOGICAL
Rule 73    expr -> INCREMENT variable
Rule 74    expr -> variable INCREMENT
Rule 75    expr -> DECREMENT variable
Rule 76    expr -> variable DECREMENT
Rule 77    expr -> variable LBRACKET expr RBRACKET
Rule 78    expr -> LPAREN expr RPAREN
Rule 79    expr -> unary_operator expr
Rule 80    expr -> expr INTE_DOT expr DDOT expr
Rule 81    expr -> expr comparission_operator expr
Rule 82    expr -> variable assign_operator expr
Rule 83    expr -> variable assign_operator AMPERSAND expr
Rule 84    expr -> expr arithmetic_operator expr
Rule 85    expr -> LPAREN type_cast_operator RPAREN expr
Rule 86    expr -> EXIT expr_EXIT
Rule 87    expr -> DIE expr_EXIT
Rule 88    expr -> ARRAY_TYPE LPAREN array_pair_list RPAREN
Rule 89    expr -> function_call
Rule 90    expr -> variable
Rule 91    expr -> NUMBER_REAL
Rule 92    expr -> NUMBER_INTEGER
Rule 93    expr -> CONSTANT_ENCAPSED_STRING
Rule 94    expr -> TRUE
Rule 95    expr -> FALSE
Rule 96    encaps -> encaps_var
Rule 97    encaps -> VARIABLE
Rule 98    encaps -> LPAREN
Rule 99    encaps -> RPAREN
Rule 100   encaps -> LKEY
Rule 101   encaps -> RKEY
Rule 102   encaps_var -> VARIABLE encaps_var_OPT
Rule 103   encaps_var -> DOLAR LBRACKET expr RBRACKET
Rule 104   encaps_var -> DOLAR LKEY ID LBRACKET expr RBRACKET RKEY
Rule 105   encaps_var -> LKEY variable RKEY
Rule 106   encaps_var_OPT -> LBRACKET encaps_var_offset RBRACKET
Rule 107   encaps_var_OPT -> <empty>
Rule 108   encaps_var_offset -> STRING
Rule 109   encaps_var_offset -> VARIABLE
Rule 110   expr_EXIT -> exit_expr
Rule 111   expr_EXIT -> <empty>
Rule 112   exit_expr -> LPAREN expr_OPT RPAREN
Rule 113   variable -> base_variable
Rule 114   variable -> function_call
Rule 115   base_variable -> reference_variable
Rule 116   base_variable -> simple_indirect_reference_DOLAR reference_variable
Rule 117   reference_variable -> compound_variable reference_variable_SELECTOR
Rule 118   compound_variable -> VARIABLE
Rule 119   compound_variable -> DOLAR LKEY expr RKEY
Rule 120   selector -> LBRACKET selector_EXPR RBRACKET
Rule 121   function_declaration_statement -> FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
Rule 122   parameter_list -> parameter parameter_list_COLON_PARAMETER
Rule 123   parameter_list -> <empty>
Rule 124   parameter -> parameter_type AMPERSAND_OPT VARIABLE parameter_ASSIGN_STATIC_OPT
Rule 125   parameter_type -> INT_TYPE
Rule 126   parameter_type -> BOOLEAN_TYPE
Rule 127   parameter_type -> STRING_TYPE
Rule 128   parameter_type -> FLOAT_TYPE
Rule 129   parameter_type -> ARRAY_TYPE
Rule 130   parameter_type -> BOOL_TYPE
Rule 131   parameter_type -> REAL_TYPE
Rule 132   parameter_type -> DOUBLE_TYPE
Rule 133   parameter_type -> <empty>
Rule 134   static_scalar -> common_scalar
Rule 135   static_scalar -> PLUS static_scalar
Rule 136   static_scalar -> MINUS static_scalar
Rule 137   common_scalar -> NUMBER_REAL
Rule 138   common_scalar -> NUMBER_INTEGER
Rule 139   common_scalar -> CONSTANT_ENCAPSED_STRING
Rule 140   static_array_pair_list -> static_array_pair static_array_pair_list_COLON_STATIC static_array_pair_list_COLON
Rule 141   static_array_pair -> static_scalar static_array_pair_ATTR_STATIC
Rule 142   array_pair_list -> array_pair array_pair_list_ARR_PAIR
Rule 143   array_pair_list -> <empty>
Rule 144   array_pair -> expr array_pair_ATTR_EXPR_OPT
Rule 145   array_pair -> array_pair_EXPR_ATTR_OPT AMPERSAND variable
Rule 146   main_INNER -> inner_statement main_INNER
Rule 147   main_INNER -> inner_statement
Rule 148   statement_MUL -> statement statement_MUL
Rule 149   statement_MUL -> <empty>
Rule 150   inner_statement_MUL -> inner_statement inner_statement_MUL
Rule 151   inner_statement_MUL -> <empty>
Rule 152   for_expr_COLON_EXPR -> COLON expr for_expr_COLON_EXPR
Rule 153   for_expr_COLON_EXPR -> <empty>
Rule 154   statement_BLOCK_OPT -> statement
Rule 155   statement_BLOCK_OPT -> LKEY statement_MUL RKEY
Rule 156   AMPERSAND_OPT -> AMPERSAND
Rule 157   AMPERSAND_OPT -> <empty>
Rule 158   statement_attr_variable_OPT -> ATTR_ASSOC ampersand_variable
Rule 159   statement_attr_variable_OPT -> <empty>
Rule 160   function_call_list_COLON_FUNCTION -> COLON function_call_parameter function_call_list_COLON_FUNCTION
Rule 161   function_call_list_COLON_FUNCTION -> <empty>
Rule 162   expr_without_variable_COLON_ASSIGNMENT -> COLON assignment_list_element expr_without_variable_COLON_ASSIGNMENT
Rule 163   expr_without_variable_COLON_ASSIGNMENT -> <empty>
Rule 164   assignment_list_element_COLON_ASSIGNMENT -> COLON assignment_list_element assignment_list_element_COLON_ASSIGNMENT
Rule 165   assignment_list_element_COLON_ASSIGNMENT -> <empty>
Rule 166   expr_OPT -> expr
Rule 167   expr_OPT -> <empty>
Rule 168   expr_without_variable_ENCAPS -> encaps expr_without_variable_ENCAPS
Rule 169   expr_without_variable_ENCAPS -> <empty>
Rule 170   parameter_list_COLON_PARAMETER -> COLON parameter parameter_list_COLON_PARAMETER
Rule 171   parameter_list_COLON_PARAMETER -> <empty>
Rule 172   parameter_ASSIGN_STATIC_OPT -> ASSIGN static_scalar
Rule 173   parameter_ASSIGN_STATIC_OPT -> <empty>
Rule 174   reference_variable_SELECTOR -> selector reference_variable_SELECTOR
Rule 175   reference_variable_SELECTOR -> <empty>
Rule 176   simple_indirect_reference_DOLAR -> DOLAR simple_indirect_reference_DOLAR
Rule 177   simple_indirect_reference_DOLAR -> <empty>
Rule 178   selector_EXPR -> expr
Rule 179   selector_EXPR -> <empty>
Rule 180   static_scalar_OPT -> static_array_pair_list
Rule 181   static_scalar_OPT -> <empty>
Rule 182   static_array_pair_list_COLON_STATIC -> COLON static_array_pair static_array_pair_list_COLON_STATIC
Rule 183   static_array_pair_list_COLON_STATIC -> <empty>
Rule 184   static_array_pair_list_COLON -> COLON
Rule 185   static_array_pair_list_COLON -> <empty>
Rule 186   static_array_pair_ATTR_STATIC -> ATTR_ASSOC static_scalar
Rule 187   static_array_pair_ATTR_STATIC -> <empty>
Rule 188   array_pair_list_ARR_PAIR -> COLON array_pair array_pair_list_ARR_PAIR
Rule 189   array_pair_list_ARR_PAIR -> <empty>
Rule 190   array_pair_ATTR_EXPR_OPT -> ATTR_ASSOC expr
Rule 191   array_pair_ATTR_EXPR_OPT -> <empty>
Rule 192   array_pair_EXPR_ATTR_OPT -> expr ATTR_ASSOC
Rule 193   array_pair_EXPR_ATTR_OPT -> <empty>

Terminals, with rules where they appear

ADD_ASSIGN           : 59
AMPERSAND            : 39 83 145 156
AND                  : 
APOSTROFE            : 
ARRAY_TYPE           : 50 88 129
ARROBA               : 
AS                   : 29
ASPAS                : 
ASSIGN               : 64 172
ATTR_ASSOC           : 158 186 190 192
BEGIN_PROGRAM        : 1 2
BOOLEAN_TYPE         : 51 126
BOOL_TYPE            : 52 130
BREAK                : 11
CASE                 : 
CLONE                : 
COLON                : 19 152 160 162 164 170 182 184 188
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONCATENATE          : 
CONSTANT_ENCAPSED_STRING : 93 139
CONTINUE             : 12
CRASE                : 
DDOT                 : 80
DECLARE              : 
DECREMENT            : 75 76
DIE                  : 87
DIVIDE               : 55
DIVIDE_ASSIGN        : 63
DO                   : 8
DOLAR                : 17 18 103 104 119 176
DOUBLE_TYPE          : 46 132
ELSE                 : 27
ELSEIF               : 25
ENDDECLARE           : 
END_PROGRAM          : 1 2
EQUALS               : 65
EXC_DOT              : 42
EXIT                 : 86
FALSE                : 95
FLOAT_TYPE           : 47 128
FOR                  : 9
FOREACH              : 29
FUNCTION             : 121
GLOBAL               : 14
GREAT_EQUAL          : 69
GREAT_THAN           : 66
ID                   : 34 104 121
IDENTATION           : 
IF                   : 24
INCREMENT            : 73 74
INTE_DOT             : 80
INT_TYPE             : 45 125
LBRACKET             : 77 103 104 106 120
LEFT_LOGICAL         : 71
LESS_EQUAL           : 68
LESS_THAN            : 67
LIST                 : 41
LKEY                 : 18 100 104 105 119 121 155
LPAREN               : 9 21 29 34 41 78 85 88 98 112 121
MINUS                : 44 58 136
MOD_ASSIGN           : 61
NOT_EQUAL            : 70
NUMBER_INTEGER       : 92 138
NUMBER_REAL          : 91 137
OR                   : 
PERCENT              : 56
PLUS                 : 43 54 135
PLUS_ASSIGN          : 62
RBRACKET             : 77 103 104 106 120
REAL_TYPE            : 48 131
RETURN               : 13
RIGHT_LOGICAL        : 72
RKEY                 : 18 101 104 105 119 121 155
RPAREN               : 9 21 29 34 41 78 85 88 99 112 121
SEMICOLON            : 5 8 9 9 11 12 13 14
STRING               : 108
STRING_TYPE          : 49 127
SUB_ASSIGN           : 60
TIMES                : 57
TRUE                 : 94
UNSET                : 53
VAR                  : 
VARIABLE             : 15 16 17 39 97 102 109 118 124
WHILE                : 7 8
error                : 

Nonterminals, with rules where they appear

AMPERSAND_OPT        : 15 121 124
ampersand_variable   : 29 158
arithmetic_operator  : 84
array_pair           : 142 188
array_pair_ATTR_EXPR_OPT : 144
array_pair_EXPR_ATTR_OPT : 145
array_pair_list      : 88
array_pair_list_ARR_PAIR : 142 188
assign_operator      : 82 83
assignment_list_element : 41 162 164
assignment_list_element_COLON_ASSIGNMENT : 41 164
base_variable        : 35 113
common_scalar        : 134
comparission_operator : 81
compound_variable    : 117
encaps               : 168
encaps_var           : 96
encaps_var_OPT       : 102
encaps_var_offset    : 106
exit_expr            : 110
expr                 : 5 18 21 22 31 32 77 78 79 80 80 80 81 81 82 83 84 84 85 103 104 119 144 152 166 178 190 192
expr_EXIT            : 86 87
expr_OPT             : 11 12 112
expr_paren           : 7 8 24 25
expr_return_OPT      : 13
expr_without_variable_COLON_ASSIGNMENT : 162
expr_without_variable_ENCAPS : 168
for_expr_COLON_EXPR  : 32 152
for_expr_OPT         : 9 9 9
foreach_first_param  : 29
function_call        : 89 114
function_call_list_COLON_FUNCTION : 36 160
function_call_parameter : 36 160
function_call_parameter_list : 34
function_declaration_statement : 3
global_var           : 14 19
inner_statement      : 146 147 150
inner_statement_MUL  : 121 150
main                 : 0
main_INNER           : 1 146
parameter            : 122 170
parameter_ASSIGN_STATIC_OPT : 124
parameter_list       : 121
parameter_list_COLON_PARAMETER : 122 170
parameter_type       : 124
reference_variable   : 115 116
reference_variable_SELECTOR : 117 174
selector             : 174
selector_EXPR        : 120
simple_indirect_reference_DOLAR : 116 176
statement            : 4 148 154
statement_BLOCK_OPT  : 7 8 9 24 25 27 29
statement_COLON_GLOBAL : 14 19
statement_MUL        : 148 155
statement_attr_variable_OPT : 29
statement_else       : 6
statement_elseif     : 6
statement_foreach    : 10
statement_if         : 6
static_array_pair    : 140 182
static_array_pair_ATTR_STATIC : 141
static_array_pair_list : 180
static_array_pair_list_COLON : 140
static_array_pair_list_COLON_STATIC : 140 182
static_scalar        : 135 136 141 172 186
static_scalar_OPT    : 
type_cast_operator   : 85
unary_operator       : 79
variable             : 30 38 40 73 74 75 76 77 82 83 90 105 145

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . BEGIN_PROGRAM main_INNER END_PROGRAM
    (2) main -> . BEGIN_PROGRAM END_PROGRAM

    BEGIN_PROGRAM   shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> BEGIN_PROGRAM . main_INNER END_PROGRAM
    (2) main -> BEGIN_PROGRAM . END_PROGRAM
    (146) main_INNER -> . inner_statement main_INNER
    (147) main_INNER -> . inner_statement
    (3) inner_statement -> . function_declaration_statement
    (4) inner_statement -> . statement
    (121) function_declaration_statement -> . FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (5) statement -> . expr SEMICOLON
    (6) statement -> . statement_if statement_elseif statement_else
    (7) statement -> . WHILE expr_paren statement_BLOCK_OPT
    (8) statement -> . DO statement_BLOCK_OPT WHILE expr_paren SEMICOLON
    (9) statement -> . FOR LPAREN for_expr_OPT SEMICOLON for_expr_OPT SEMICOLON for_expr_OPT RPAREN statement_BLOCK_OPT
    (10) statement -> . statement_foreach
    (11) statement -> . BREAK expr_OPT SEMICOLON
    (12) statement -> . CONTINUE expr_OPT SEMICOLON
    (13) statement -> . RETURN expr_return_OPT SEMICOLON
    (14) statement -> . GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
    (73) expr -> . INCREMENT variable
    (74) expr -> . variable INCREMENT
    (75) expr -> . DECREMENT variable
    (76) expr -> . variable DECREMENT
    (77) expr -> . variable LBRACKET expr RBRACKET
    (78) expr -> . LPAREN expr RPAREN
    (79) expr -> . unary_operator expr
    (80) expr -> . expr INTE_DOT expr DDOT expr
    (81) expr -> . expr comparission_operator expr
    (82) expr -> . variable assign_operator expr
    (83) expr -> . variable assign_operator AMPERSAND expr
    (84) expr -> . expr arithmetic_operator expr
    (85) expr -> . LPAREN type_cast_operator RPAREN expr
    (86) expr -> . EXIT expr_EXIT
    (87) expr -> . DIE expr_EXIT
    (88) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (89) expr -> . function_call
    (90) expr -> . variable
    (91) expr -> . NUMBER_REAL
    (92) expr -> . NUMBER_INTEGER
    (93) expr -> . CONSTANT_ENCAPSED_STRING
    (94) expr -> . TRUE
    (95) expr -> . FALSE
    (24) statement_if -> . IF expr_paren statement_BLOCK_OPT
    (29) statement_foreach -> . FOREACH LPAREN foreach_first_param AS ampersand_variable statement_attr_variable_OPT RPAREN statement_BLOCK_OPT
    (113) variable -> . base_variable
    (114) variable -> . function_call
    (42) unary_operator -> . EXC_DOT
    (43) unary_operator -> . PLUS
    (44) unary_operator -> . MINUS
    (34) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (35) function_call -> . base_variable
    (115) base_variable -> . reference_variable
    (116) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (117) reference_variable -> . compound_variable reference_variable_SELECTOR
    (176) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (177) simple_indirect_reference_DOLAR -> .
    (118) compound_variable -> . VARIABLE
    (119) compound_variable -> . DOLAR LKEY expr RKEY

  ! shift/reduce conflict for DOLAR resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    END_PROGRAM     shift and go to state 4
    FUNCTION        shift and go to state 8
    WHILE           shift and go to state 13
    DO              shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    GLOBAL          shift and go to state 20
    INCREMENT       shift and go to state 21
    DECREMENT       shift and go to state 23
    LPAREN          shift and go to state 10
    EXIT            shift and go to state 25
    DIE             shift and go to state 26
    ARRAY_TYPE      shift and go to state 27
    NUMBER_REAL     shift and go to state 29
    NUMBER_INTEGER  shift and go to state 30
    CONSTANT_ENCAPSED_STRING shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    IF              shift and go to state 34
    FOREACH         shift and go to state 35
    EXC_DOT         shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 9
    DOLAR           shift and go to state 43
    VARIABLE        shift and go to state 44

  ! VARIABLE        [ reduce using rule 177 (simple_indirect_reference_DOLAR -> .) ]
  ! DOLAR           [ reduce using rule 177 (simple_indirect_reference_DOLAR -> .) ]

    main_INNER                     shift and go to state 3
    inner_statement                shift and go to state 5
    function_declaration_statement shift and go to state 6
    statement                      shift and go to state 7
    expr                           shift and go to state 11
    statement_if                   shift and go to state 12
    statement_foreach              shift and go to state 16
    variable                       shift and go to state 22
    unary_operator                 shift and go to state 24
    function_call                  shift and go to state 28
    base_variable                  shift and go to state 36
    reference_variable             shift and go to state 40
    simple_indirect_reference_DOLAR shift and go to state 41
    compound_variable              shift and go to state 42

state 3

    (1) main -> BEGIN_PROGRAM main_INNER . END_PROGRAM

    END_PROGRAM     shift and go to state 45


state 4

    (2) main -> BEGIN_PROGRAM END_PROGRAM .

    $end            reduce using rule 2 (main -> BEGIN_PROGRAM END_PROGRAM .)


state 5

    (146) main_INNER -> inner_statement . main_INNER
    (147) main_INNER -> inner_statement .
    (146) main_INNER -> . inner_statement main_INNER
    (147) main_INNER -> . inner_statement
    (3) inner_statement -> . function_declaration_statement
    (4) inner_statement -> . statement
    (121) function_declaration_statement -> . FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (5) statement -> . expr SEMICOLON
    (6) statement -> . statement_if statement_elseif statement_else
    (7) statement -> . WHILE expr_paren statement_BLOCK_OPT
    (8) statement -> . DO statement_BLOCK_OPT WHILE expr_paren SEMICOLON
    (9) statement -> . FOR LPAREN for_expr_OPT SEMICOLON for_expr_OPT SEMICOLON for_expr_OPT RPAREN statement_BLOCK_OPT
    (10) statement -> . statement_foreach
    (11) statement -> . BREAK expr_OPT SEMICOLON
    (12) statement -> . CONTINUE expr_OPT SEMICOLON
    (13) statement -> . RETURN expr_return_OPT SEMICOLON
    (14) statement -> . GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
    (73) expr -> . INCREMENT variable
    (74) expr -> . variable INCREMENT
    (75) expr -> . DECREMENT variable
    (76) expr -> . variable DECREMENT
    (77) expr -> . variable LBRACKET expr RBRACKET
    (78) expr -> . LPAREN expr RPAREN
    (79) expr -> . unary_operator expr
    (80) expr -> . expr INTE_DOT expr DDOT expr
    (81) expr -> . expr comparission_operator expr
    (82) expr -> . variable assign_operator expr
    (83) expr -> . variable assign_operator AMPERSAND expr
    (84) expr -> . expr arithmetic_operator expr
    (85) expr -> . LPAREN type_cast_operator RPAREN expr
    (86) expr -> . EXIT expr_EXIT
    (87) expr -> . DIE expr_EXIT
    (88) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (89) expr -> . function_call
    (90) expr -> . variable
    (91) expr -> . NUMBER_REAL
    (92) expr -> . NUMBER_INTEGER
    (93) expr -> . CONSTANT_ENCAPSED_STRING
    (94) expr -> . TRUE
    (95) expr -> . FALSE
    (24) statement_if -> . IF expr_paren statement_BLOCK_OPT
    (29) statement_foreach -> . FOREACH LPAREN foreach_first_param AS ampersand_variable statement_attr_variable_OPT RPAREN statement_BLOCK_OPT
    (113) variable -> . base_variable
    (114) variable -> . function_call
    (42) unary_operator -> . EXC_DOT
    (43) unary_operator -> . PLUS
    (44) unary_operator -> . MINUS
    (34) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (35) function_call -> . base_variable
    (115) base_variable -> . reference_variable
    (116) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (117) reference_variable -> . compound_variable reference_variable_SELECTOR
    (176) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (177) simple_indirect_reference_DOLAR -> .
    (118) compound_variable -> . VARIABLE
    (119) compound_variable -> . DOLAR LKEY expr RKEY

  ! shift/reduce conflict for DOLAR resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    END_PROGRAM     reduce using rule 147 (main_INNER -> inner_statement .)
    FUNCTION        shift and go to state 8
    WHILE           shift and go to state 13
    DO              shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    GLOBAL          shift and go to state 20
    INCREMENT       shift and go to state 21
    DECREMENT       shift and go to state 23
    LPAREN          shift and go to state 10
    EXIT            shift and go to state 25
    DIE             shift and go to state 26
    ARRAY_TYPE      shift and go to state 27
    NUMBER_REAL     shift and go to state 29
    NUMBER_INTEGER  shift and go to state 30
    CONSTANT_ENCAPSED_STRING shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    IF              shift and go to state 34
    FOREACH         shift and go to state 35
    EXC_DOT         shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 9
    DOLAR           shift and go to state 43
    VARIABLE        shift and go to state 44

  ! VARIABLE        [ reduce using rule 177 (simple_indirect_reference_DOLAR -> .) ]
  ! DOLAR           [ reduce using rule 177 (simple_indirect_reference_DOLAR -> .) ]

    inner_statement                shift and go to state 5
    main_INNER                     shift and go to state 46
    function_declaration_statement shift and go to state 6
    statement                      shift and go to state 7
    expr                           shift and go to state 11
    statement_if                   shift and go to state 12
    statement_foreach              shift and go to state 16
    variable                       shift and go to state 22
    unary_operator                 shift and go to state 24
    function_call                  shift and go to state 28
    base_variable                  shift and go to state 36
    reference_variable             shift and go to state 40
    simple_indirect_reference_DOLAR shift and go to state 41
    compound_variable              shift and go to state 42

state 6

    (3) inner_statement -> function_declaration_statement .

    FUNCTION        reduce using rule 3 (inner_statement -> function_declaration_statement .)
    WHILE           reduce using rule 3 (inner_statement -> function_declaration_statement .)
    DO              reduce using rule 3 (inner_statement -> function_declaration_statement .)
    FOR             reduce using rule 3 (inner_statement -> function_declaration_statement .)
    BREAK           reduce using rule 3 (inner_statement -> function_declaration_statement .)
    CONTINUE        reduce using rule 3 (inner_statement -> function_declaration_statement .)
    RETURN          reduce using rule 3 (inner_statement -> function_declaration_statement .)
    GLOBAL          reduce using rule 3 (inner_statement -> function_declaration_statement .)
    INCREMENT       reduce using rule 3 (inner_statement -> function_declaration_statement .)
    DECREMENT       reduce using rule 3 (inner_statement -> function_declaration_statement .)
    LPAREN          reduce using rule 3 (inner_statement -> function_declaration_statement .)
    EXIT            reduce using rule 3 (inner_statement -> function_declaration_statement .)
    DIE             reduce using rule 3 (inner_statement -> function_declaration_statement .)
    ARRAY_TYPE      reduce using rule 3 (inner_statement -> function_declaration_statement .)
    NUMBER_REAL     reduce using rule 3 (inner_statement -> function_declaration_statement .)
    NUMBER_INTEGER  reduce using rule 3 (inner_statement -> function_declaration_statement .)
    CONSTANT_ENCAPSED_STRING reduce using rule 3 (inner_statement -> function_declaration_statement .)
    TRUE            reduce using rule 3 (inner_statement -> function_declaration_statement .)
    FALSE           reduce using rule 3 (inner_statement -> function_declaration_statement .)
    IF              reduce using rule 3 (inner_statement -> function_declaration_statement .)
    FOREACH         reduce using rule 3 (inner_statement -> function_declaration_statement .)
    EXC_DOT         reduce using rule 3 (inner_statement -> function_declaration_statement .)
    PLUS            reduce using rule 3 (inner_statement -> function_declaration_statement .)
    MINUS           reduce using rule 3 (inner_statement -> function_declaration_statement .)
    ID              reduce using rule 3 (inner_statement -> function_declaration_statement .)
    DOLAR           reduce using rule 3 (inner_statement -> function_declaration_statement .)
    VARIABLE        reduce using rule 3 (inner_statement -> function_declaration_statement .)
    END_PROGRAM     reduce using rule 3 (inner_statement -> function_declaration_statement .)
    RKEY            reduce using rule 3 (inner_statement -> function_declaration_statement .)


state 7

    (4) inner_statement -> statement .

    FUNCTION        reduce using rule 4 (inner_statement -> statement .)
    WHILE           reduce using rule 4 (inner_statement -> statement .)
    DO              reduce using rule 4 (inner_statement -> statement .)
    FOR             reduce using rule 4 (inner_statement -> statement .)
    BREAK           reduce using rule 4 (inner_statement -> statement .)
    CONTINUE        reduce using rule 4 (inner_statement -> statement .)
    RETURN          reduce using rule 4 (inner_statement -> statement .)
    GLOBAL          reduce using rule 4 (inner_statement -> statement .)
    INCREMENT       reduce using rule 4 (inner_statement -> statement .)
    DECREMENT       reduce using rule 4 (inner_statement -> statement .)
    LPAREN          reduce using rule 4 (inner_statement -> statement .)
    EXIT            reduce using rule 4 (inner_statement -> statement .)
    DIE             reduce using rule 4 (inner_statement -> statement .)
    ARRAY_TYPE      reduce using rule 4 (inner_statement -> statement .)
    NUMBER_REAL     reduce using rule 4 (inner_statement -> statement .)
    NUMBER_INTEGER  reduce using rule 4 (inner_statement -> statement .)
    CONSTANT_ENCAPSED_STRING reduce using rule 4 (inner_statement -> statement .)
    TRUE            reduce using rule 4 (inner_statement -> statement .)
    FALSE           reduce using rule 4 (inner_statement -> statement .)
    IF              reduce using rule 4 (inner_statement -> statement .)
    FOREACH         reduce using rule 4 (inner_statement -> statement .)
    EXC_DOT         reduce using rule 4 (inner_statement -> statement .)
    PLUS            reduce using rule 4 (inner_statement -> statement .)
    MINUS           reduce using rule 4 (inner_statement -> statement .)
    ID              reduce using rule 4 (inner_statement -> statement .)
    DOLAR           reduce using rule 4 (inner_statement -> statement .)
    VARIABLE        reduce using rule 4 (inner_statement -> statement .)
    END_PROGRAM     reduce using rule 4 (inner_statement -> statement .)
    RKEY            reduce using rule 4 (inner_statement -> statement .)


state 8

    (121) function_declaration_statement -> FUNCTION . AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (156) AMPERSAND_OPT -> . AMPERSAND
    (157) AMPERSAND_OPT -> .

    AMPERSAND       shift and go to state 48
    ID              reduce using rule 157 (AMPERSAND_OPT -> .)

    AMPERSAND_OPT                  shift and go to state 47

state 9

    (34) function_call -> ID . LPAREN function_call_parameter_list RPAREN

    LPAREN          shift and go to state 49


state 10
